--- a/clubtalk/page/static/css/skeleton.css
+++ b/clubtalk/page/static/css/skeleton.css
@@ -222,7 +222,7 @@ input[type="button"].button-primary {
   color: #FFF;
   background-color: #33C3F0;
   border-color: #33C3F0; 
-  margin: 0 .7em;}
+  margin: 1 3em;}
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -379,6 +379,14 @@ form {
   box-sizing: border-box; }
 .u-max-full-width {
   max-width: 100%;
+  box-sizing: border-box;
+  border: 3.5px solid #33C3F0; 
+  border-radius: 3%;}
+.u-normal-width {
+  width: 80%;
+  box-sizing: border-box; }
+.u-max-normal-width {
+  max-width: 80%;
   box-sizing: border-box;
   border: 3.5px solid #33C3F0; 
   border-radius: 3%;}
