--- a/clubtalk/page/templates/page/post_detail3.html
+++ b/clubtalk/page/templates/page/post_detail3.html
@@ -139,8 +139,8 @@
                   <b>Sort Reviews By:</b> <br>
                   <select id="sort" name="sort" onchange="this.form.submit()">
                       <option hidden>Sort</option>
-                      <option selected="selected" value="1">Review Date</option>
-                      <option value="2">Review Rating</option>
+                      <option value="1">Review Date</option>
+                      <option selected="selected" value="2">Review Rating</option>
                   </select>
               </form>
             </div>
