Changed models and views to make stars work

--- a/clubtalk/page/templates/page/post_detail2.html
+++ b/clubtalk/page/templates/page/post_detail2.html
@@ -214,7 +214,7 @@
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                       <label class="btn btn-primary active">
                         <a href = "{% url 'review_increment' club.pk review.pk %}">
-                          <i class="fas fa-arrow-alt-circle-up"></i>
+                          <input type="radio" name="options" id="option1" autocomplete="off" checked> <i class="fas fa-arrow-alt-circle-up"></i>
                         </a>
                       </label>
                       <label class="btn btn-info active">
