--- a/clubtalk/page/templates/page/post_detail2.html
+++ b/clubtalk/page/templates/page/post_detail2.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+            <img class="card-img-top" src="http://placehold.it/300x200" alt="20%">
           </div>
         </div>
         <div class="col-sm-4 my-4">
