--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -1,28 +1,7 @@
+{% extends 'page/baseB.html' %}
 {% load static %}
 {% load templatetags %}
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Princeton Club Talk</title>
-    <link rel="icon" href="{% static 'images/tiger_logo.png' %}">
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'fontawesome/fontawesome-all.css' %}" rel="stylesheet">
-    <link href="{% static 'css/business-frontpage.css' %}" rel="stylesheet">
-
-  </head>
-
-  <body>
+{% block content %}
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -319,6 +298,5 @@
       });
     </script>
 
-  </body>
 
-</html>
+{% endblock %}
