Added reviews page

--- a/page/templates/page/baseB.html
+++ b/page/templates/page/baseB.html
@@ -39,10 +39,10 @@
                   </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Clubs</a>
+                  <a class="nav-link" href="/clublist">Clubs</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Top 20</a>
+                  <a class="nav-link" href="/top20">Top 20</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="#">(Hi BWK!)</a>
