--- a/page/templates/page/search_results.html
+++ b/page/templates/page/search_results.html
@@ -1,57 +1,7 @@
+{% extends 'page/baseB.html' %}
 {% load static %}
 {% load templatetags %}
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Princeton Club Talk</title>
-    <link rel="icon" href="{% static 'images/tiger_logo.png' %}">
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'fontawesome/fontawesome-all.css' %}" rel="stylesheet">
-    <link href="{% static 'css/business-frontpage.css' %}" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="/"><i class="far fa-comments"></i> Princeton Club Talk <span class="badge badge-dark">Beta</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Clubs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Top 20</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">(Hi BWK!)</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+{% block content %}
     <br>
 
     <div class="container">
@@ -145,7 +95,6 @@
       });
     </script>
 
-  </body>
+{% endblock %}
 
-</html>
 
