--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -3,34 +3,6 @@
 {% load templatetags %}
 {% block content %}
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="/"><i class="far fa-comments"></i> Princeton Club Talk <span class="badge badge-dark">Beta</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Clubs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Top 20</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">(Hi BWK!)</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <!-- Header with Background Image 
     <header class="business-header">
       <div class="container">
@@ -70,6 +42,7 @@
         <div class="row">
           <div class="col-sm-8">
             <h2 class="mt-4">{{club.name}}
+
               {% if star_count %}
                 &nbsp; &nbsp;{{star_count|floatformat:"-2"}} <a data-toggle="tooltip" data-placement="top" title="Average ranking for {{club.name}}"><i class="fas fa-star"></a></i>  
               {% endif %}
@@ -90,7 +63,7 @@
             </h2>
             <p>{{club.desc}}</p>
             <p>
-              <a class="btn btn-primary btn-lg" href="#">Check out our reviews!</a>
+              <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Check out our reviews!</a>
             </p>
           </div>
           <div class="col-sm-4">
@@ -210,7 +183,12 @@
                 </div>
                 <br>
                 {% endfor %}
-              <a href="{% url 'post_new' pk=club.pk %}" class="btn btn-primary">Review {{club.name}}!</a>
+
+              <center>
+                <a href="{% url 'post_new' pk=club.pk %}" class="btn btn-primary">Add a review!</a>
+                &nbsp;
+                <a href="{% url 'all_reviews' pk=club.pk %}" class="btn btn-primary">See all reviews</a>
+              </center>
             </div>
           </div>
         </div>
