--- a/page/static/css/business-frontpage.css
+++ b/page/static/css/business-frontpage.css
@@ -31,6 +31,11 @@ body {
   height: 100px;
   background-color: rgb(255, 165, 0, .8);
 }
+
+.img-thumbnail {
+  width: 300px;
+  height: 200px;
+}
 .business-header {
   height: 50vh;
   min-height: 300px;
