--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -22,19 +22,19 @@
 
       <div class="row">
         <div class="col-sm-4 my-4">
-          <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="20%">
-          </div>
+
+            <img class="img-thumbnail" src="http://www.princetonroaring20.com/wp-content/uploads/2016/04/delancey-logo-backgroundless.png" alt="">
+
         </div>
         <div class="col-sm-4 my-4">
-          <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-          </div>
+
+            <img class="img-thumbnail" src="http://rag532wr4du1nlsxu2nehjbv.wpengine.netdna-cdn.com/wp-content/uploads/2016/06/20161201_PrincetonDanceFest16_BD002-0x1000-c-default.jpg" alt="">
+
         </div>
         <div class="col-sm-4 my-4">
-          <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-          </div>
+
+            <img class="img-thumbnail" src="http://www.brucesallan.com/wp-content/uploads/2015/02/Unstrumental-Acapella-Group-pose.png" alt="">
+
         </div>
       </div>
       <div class="body1">
@@ -44,7 +44,7 @@
             <h2 class="mt-4">{{club.name}}
 
               {% if star_count %}
-                &nbsp; &nbsp;{{star_count|floatformat:"-2"}} <a data-toggle="tooltip" data-placement="top" title="Average ranking for {{club.name}}"><i class="fas fa-star"></a></i>  
+                &nbsp; &nbsp;{{star_count|floatformat:"-1"}} <a data-toggle="tooltip" data-placement="top" title="Average ranking for {{club.name}}"><i class="fas fa-star"></a></i>  
               {% endif %}
               {% if review_count %}
                 {% if happy_result %}
