--- a/page/templates/page/top20.html
+++ b/page/templates/page/top20.html
@@ -38,7 +38,7 @@
               <br>
               <strong>Involved Students</strong>
               <i class="fas fa-user"></i>
-              {% for leader in club.leaders.all %}
+              {% for leader in club.leader_set.all %}
                 <br>{{leader.title}}: <a href="{{leader.email|mail}}">{{leader.name}}</a>
               {% endfor %}
               <br>
