--- a/page/templates/page/post_edit.html
+++ b/page/templates/page/post_edit.html
@@ -5,8 +5,9 @@
 <html>
     <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
     <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
-    
-    <h1>New review</h1>
+    <br />
+    <br />
+    <h1>New review by {{user.username}}</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Submit me!</button>
