--- a/page/static/css/homepage.css
+++ b/page/static/css/homepage.css
@@ -9,6 +9,15 @@ body {
   background-image: url("../images/nassau_hall.jpg");
   background-size:     cover;                      /* <------ */
   background-repeat:   no-repeat;
+  background-position: center;
+
+}
+
+.container-1 {
+  background-image: url("../images/nassau_hall.jpg");
+  background-size:     cover;                      /* <------ */
+  background-repeat:   no-repeat;
+  background-position: center;
 }
 
 @media (min-width: 992px) {
@@ -17,8 +26,15 @@ body {
   }
 }
 
-.panel-default {
-  background-color: white;
+/*.panel-body {
+  background-color: #E8E8E8;
+}*/
+
+
+
+.notopaque{
+  background: red;
+  opacity: 10000;
 }
 .navbar {
   background-color: orange;
@@ -65,10 +81,15 @@ body {
 
 .panelT {
   border: 2px solid black;
-  background-color: white;
-  opacity: .85;
+  background-color: rgb(255, 255, 255, .85);
+  border-radius: 10px;
 
 }
+
+.btn-outline-secondary-1 {
+  background: white;
+}
+
 
 #imaginary_container{
     margin-top:20%; /* Don't copy this */
