--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -57,93 +57,111 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="/"><i class="far fa-comments"></i> Princeton Club Talk <span class="badge badge-dark">Beta</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/">Home
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="/clublist">Clubs</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="/top20">Top 20</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Help!</a>
-                </li>
-              </ul>
+            <div class="container">
+              <a class="navbar-brand" href="/"><i class="far fa-comments"></i> Princeton Club Talk <span class="badge badge-dark">Beta</span></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/">Home
+                        <span class="sr-only">(current)</span>
+                      </a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/clublist">Clubs</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/top20">Top 20</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Help!</a>
+                    </li>
+                  </ul>
+              </div>
             </div>
-          </div>
         </nav>
 
-    	<div class="container">
-    		<br>
-    		<br>
-    		<br>
-    		<br>
-    		<br>
-	     	<div class="top">
-	     		<div class="jumbotron-trans">
-		        	<div class="row">
-		        		<div class="col-sm-2">
-		        		</div>
-		          		<div class="col-sm-8">
-		            		<div class="panelT panel-default-1">
-							  	<div class="panel-body">
-								  	<center>
-								  		<br>
-								  		<h1>Princeton Club Talk</h1>
-								  		<h2>Welcome to Club Talk! Search for a club below.</h2>
-							            <div id="imaginary_container"> 
-							                <div class="input-group stylish-input-group">
-							                <form action="/search/" method="get">
-							                	<select id="type" name="type">
-											     	<option value="%">All</option>
-													<option value="17">A Cappella</option>
-													<option value="5">Academic</option>
-													<option value="6">Career Opportunity</option>
-													<option value="9">Cultural</option>
-													<option value="14">Dance</option>
-													<option value="4">Educational</option>
-													<option value="10">Environmental</option>
-													<option value="11">Games</option>
-													<option value="2">Media</option>
-													<option value="15">Music</option>
-													<option value="13">Performing Arts</option>
-													<option value="8">Political</option>
-													<option value="1">Publication</option>
-													<option value="18">Religious</option>
-													<option value="7">Service</option>
-													<option value="12">Social</option>
-													<option value="3">Special Interest</option>
-													<option value="16">Theater</option>
-												</select>
-							                    <input type="text" name="q"  >
-							                    <span class="input-group-addon">
-							                        <button type="submit" value="Search">
-							                            <i class="fas fa-search"></i>
-							                        </button>  
-							                    </span>
-							                </form>
-							                </div>
-							            </div>
-									</center>
-								</div>
-							</div>
-		        		</div>
-		        		<div class="col-sm-2">
-		        		</div>
-		    		</div>
-		    	</div>
-	    	</div>
-	    </div>	
+      <div class="container">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="top">
+          <div class="jumbotron-trans">
+              <div class="row">
+                <div class="col-sm-2">
+                </div>
+                  <div class="col-sm-8">
+                    <div class="panelT panel-default-1">
+                  <div class="panel-body">
+                    <center>
+                      <br>
+                      <h1>Princeton Club Talk</h1>
+                      <br>
+                      <h2>Welcome to Club Talk! Search for a club below.</h2>
+                      <br>
+
+                      <form action="/search/" method="get">
+                      <div class="input-group mb-3">
+                        &nbsp;&nbsp;&nbsp;
+                        <div class="input-group-prepend">
+                          <select class="custom-select" id="type" name="type">
+                              <option selected value="%">Categories</option>
+                              <option value="%">All</option>
+                            <option value="17">A Cappella</option>
+                            <option value="5">Academic</option>
+                            <option value="6">Career Opportunity</option>
+                            <option value="9">Cultural</option>
+                            <option value="14">Dance</option>
+                            <option value="4">Educational</option>
+                            <option value="10">Environmental</option>
+                            <option value="11">Games</option>
+                            <option value="2">Media</option>
+                            <option value="15">Music</option>
+                            <option value="13">Performing Arts</option>
+                            <option value="8">Political</option>
+                            <option value="1">Publication</option>
+                            <option value="18">Religious</option>
+                            <option value="7">Service</option>
+                            <option value="12">Social</option>
+                            <option value="3">Special Interest</option>
+                            <option value="16">Theater</option>
+                          </select>
+                        </div>
+                        <input type="text" name = "q" class="form-control" aria-label="Text input with dropdown button">
+                            <div class="input-group-append">
+                            <button class="btn btn-outline-dark" type="submit" value = search>Search</button>
+                        </div>
+                        &nbsp;&nbsp;&nbsp;
+                      </div>
+                      </form>
+                            <a class="btn btn-outline-primary btn-lg" href="{% url 'post_list_full' %}">&nbsp;&nbsp;All clubs&nbsp;&nbsp;</a>
+                            &nbsp;&nbsp;
+                            <a class="btn btn-outline-secondary btn-lg" href="{% url 'top20' %}">&nbsp;&nbsp;Top 20&nbsp;&nbsp;</a>
+                            <br>
+                            <br>
+                            
+
+                  </center>
+                  
+                </div>
+              </div>
+              <br>
+              <br>
+                </div>
+                <div class="col-sm-2">
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>  
+      <div class="container">
+        <div class="row">
+
+        </div>
+      </div>
 
     
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
