--- a/page/templates/page/post_edit.html
+++ b/page/templates/page/post_edit.html
@@ -1,10 +1,7 @@
-{% extends 'page/base.html' %}
+{% extends 'page/baseB.html' %}
 {% load static %}
-{% load ratings %}
 {% block content %}
 <html>
-    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
-    <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
     <br />
     <br />
     <h1>New review by {{user.username}}</h1>
